-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b19
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8309483 | 20.0.2 | Tyler Steele | P4 | Resolved | Fixed | b08 |
Parent interpreted java frames depend on `ABI_ELFv2` (see `parent_ijava_frame_abi`). This seems to be unnecessary since compiled java frames don't depend on `ABI_ELFv2` either.
On big endian systems (where `ABI_ELFv2` is not defined) this has 2 negative implications. (1) Parent frames are larger than needed because they contain 2 reserved words. (2) the definition of `metadata_words` does not match the size of parent interpreted frames which causes issues with vm continuations.
(2) causes crashes when using virtual threads on big endian systems. For top interpreted Java frames (`top_ijava_frame_abi`) it is ok to depend on `ABI_ELFv2` because the top frame is never frozen as it is always the frame of `vmIntrinsics::_Continuation_doYield`
On big endian systems (where `ABI_ELFv2` is not defined) this has 2 negative implications. (1) Parent frames are larger than needed because they contain 2 reserved words. (2) the definition of `metadata_words` does not match the size of parent interpreted frames which causes issues with vm continuations.
(2) causes crashes when using virtual threads on big endian systems. For top interpreted Java frames (`top_ijava_frame_abi`) it is ok to depend on `ABI_ELFv2` because the top frame is never frozen as it is always the frame of `vmIntrinsics::_Continuation_doYield`
- backported by
-
JDK-8309483 PPC: Non-Top Interpreted frames should be independent of ABI_ELFv2
-
- Resolved
-
- links to
-
Commit
openjdk/jdk20u/4ab1d3bb
-
Commit
openjdk/jdk/445ebef4
-
Review
openjdk/jdk20u/83
-
Review(master)
openjdk/jdk/13372