8305668: PPC: Non-Top Interpreted frames should be independent of ABI_ELFv2

Reviewed-by: mdoerr